--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {margin:0; background-color: #333; visibility: visible;}
   display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 100px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
@@ -54,7 +54,7 @@ body {margin:0; background-color: #333; visibility: visible;}
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 100px) {
   .topnav.responsive {position: fixed;}
   .topnav.responsive .icon {
     position: absolute;
@@ -93,7 +93,7 @@ body {margin:0; background-color: #333; visibility: visible;}
 
 <body>
 
-<div class="loader text-center"><img src="images/chem.gif" style="width:300px; height:300px; margin-top:120px;margin-left: auto;margin-right: auto;"/></div>
+<div class="loader text-center"><img src="images/chem.gif" style="width:100px; height:100px; margin-top:120px;margin-left: auto;margin-right: auto;"/></div>
 <div class="topnav" id="myTopnav">
 
   <a href="#Home" style="font-size: 15px;"><i href="#" class="fa fa-home"></i> Home</a>
@@ -108,7 +108,7 @@ body {margin:0; background-color: #333; visibility: visible;}
 
 </div>
 <div style="padding-top: 49px;"></div>
-<img src="images/chem.jpg" style="width: 465px; height: 465px; margin-top: 30px; background-color: #333">
+<img src="images/chem.jpg" style="width: 100px; height: 100px; margin-top: 30px; background-color: #333">
 <div style="padding-left:16px; padding-right: 16px; text-align: justify; text-justify: inter-word;">
   <br>
   <center>
@@ -132,7 +132,7 @@ body {margin:0; background-color: #333; visibility: visible;}
         		<div class="modal-body" style="text-align: justify; padding-right: 30px;">
           		  <h3 class="w3-wide" style="text-align: left;">Back to CHEMISTRY</h3>
 				  <p>CHEMISTRY is a Hybrid Android Application. This game is limited only for those who knows a basic CSS, HTML and JavaScript scripting language only. This game is for fun only at the same time learning your past lessons!<br>
-				  <center><b>Developers:</b><br>Reenheart Camacho<br>© Copyright 2017</center>
+				  <center><b>Developers:</b><br>Jerome Namoco<br>© Copyright 2017</center>
 				  </p>
 
 				</div>
